// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serializeDocument > serializes documents with collection references 1`] = `
{
  "data": {
    "from": "example@email.com",
    "root": {
      "_queryOptions": {
        "collectionId": "email",
        "endAt": undefined,
        "fieldOrders": [],
        "filters": [],
        "limit": undefined,
        "limitType": undefined,
        "offset": undefined,
        "parentPath": {
          "segments": [],
        },
        "startAt": undefined,
      },
      "_queryUtil": {
        "_firestore": {
          "_backoffSettings": {
            "backoffFactor": 1.3,
            "initialDelayMs": 100,
            "maxDelayMs": 60000,
          },
          "_clientPool": {
            "activeClients": {},
            "clientDestructor": [Function],
            "clientFactory": [Function],
            "concurrentOperationLimit": 100,
            "failedClients": {},
            "grpcEnabled": false,
            "maxIdleClients": 1,
            "terminateDeferred": {
              "promise": {},
              "reject": [Function],
              "resolve": [Function],
            },
            "terminated": false,
          },
          "_databaseId": undefined,
          "_projectId": "demo",
          "_serializer": {
            "allowUndefined": false,
            "createInteger": [Function],
            "createReference": [Function],
          },
          "_settings": {
            "libName": "gccl",
            "libVersion": "7.11.0",
            "projectId": "demo",
            "toJSON": [Function],
          },
          "_settingsFrozen": false,
          "_traceUtil": {
            "settingsAttributes": {
              "gcp.firestore.settings.database_id": "(default)",
              "gcp.firestore.settings.host": "firestore.googleapis.com:443",
              "gcp.firestore.settings.initial_retry_delay": "0.1s",
              "gcp.firestore.settings.initial_rpc_timeout": "60s",
              "gcp.firestore.settings.max_idle_channels": 1,
              "gcp.firestore.settings.max_retry_delay": "60s",
              "gcp.firestore.settings.max_rpc_timeout": "60s",
              "gcp.firestore.settings.project_id": "demo",
              "gcp.firestore.settings.retry_delay_multiplier": "1.3",
              "gcp.firestore.settings.rpc_timeout_multiplier": "1",
              "gcp.firestore.settings.total_timeout": "600s",
              "otel.scope.name": "@google-cloud/firestore",
              "otel.scope.version": "7.11.0",
            },
            "tracer": {
              "_provider": {},
              "name": "@google-cloud/firestore",
              "options": undefined,
              "version": "7.11.0",
            },
            "tracerProvider": {},
          },
          "bulkWritersCount": 0,
          "registeredListenersCount": 0,
        },
        "_queryOptions": {
          "allDescendants": false,
          "collectionId": "email",
          "converter": {
            "fromFirestore": [Function],
            "toFirestore": [Function],
          },
          "endAt": undefined,
          "fieldOrders": [],
          "filters": [],
          "kindless": false,
          "limit": undefined,
          "limitType": undefined,
          "offset": undefined,
          "parentPath": {
            "segments": [],
          },
          "projection": undefined,
          "requireConsistency": true,
          "startAt": undefined,
        },
        "_serializer": {
          "allowUndefined": false,
          "createInteger": [Function],
          "createReference": [Function],
        },
      },
    },
    "threads": [
      {
        "_queryOptions": {
          "collectionId": "threads",
          "endAt": undefined,
          "fieldOrders": [],
          "filters": [],
          "limit": undefined,
          "limitType": undefined,
          "offset": undefined,
          "parentPath": {
            "segments": [
              "email",
              "1",
            ],
          },
          "startAt": undefined,
        },
        "_queryUtil": {
          "_firestore": {
            "_backoffSettings": {
              "backoffFactor": 1.3,
              "initialDelayMs": 100,
              "maxDelayMs": 60000,
            },
            "_clientPool": {
              "activeClients": {},
              "clientDestructor": [Function],
              "clientFactory": [Function],
              "concurrentOperationLimit": 100,
              "failedClients": {},
              "grpcEnabled": false,
              "maxIdleClients": 1,
              "terminateDeferred": {
                "promise": {},
                "reject": [Function],
                "resolve": [Function],
              },
              "terminated": false,
            },
            "_databaseId": undefined,
            "_projectId": "demo",
            "_serializer": {
              "allowUndefined": false,
              "createInteger": [Function],
              "createReference": [Function],
            },
            "_settings": {
              "libName": "gccl",
              "libVersion": "7.11.0",
              "projectId": "demo",
              "toJSON": [Function],
            },
            "_settingsFrozen": false,
            "_traceUtil": {
              "settingsAttributes": {
                "gcp.firestore.settings.database_id": "(default)",
                "gcp.firestore.settings.host": "firestore.googleapis.com:443",
                "gcp.firestore.settings.initial_retry_delay": "0.1s",
                "gcp.firestore.settings.initial_rpc_timeout": "60s",
                "gcp.firestore.settings.max_idle_channels": 1,
                "gcp.firestore.settings.max_retry_delay": "60s",
                "gcp.firestore.settings.max_rpc_timeout": "60s",
                "gcp.firestore.settings.project_id": "demo",
                "gcp.firestore.settings.retry_delay_multiplier": "1.3",
                "gcp.firestore.settings.rpc_timeout_multiplier": "1",
                "gcp.firestore.settings.total_timeout": "600s",
                "otel.scope.name": "@google-cloud/firestore",
                "otel.scope.version": "7.11.0",
              },
              "tracer": {
                "_provider": {},
                "name": "@google-cloud/firestore",
                "options": undefined,
                "version": "7.11.0",
              },
              "tracerProvider": {},
            },
            "bulkWritersCount": 0,
            "registeredListenersCount": 0,
          },
          "_queryOptions": {
            "allDescendants": false,
            "collectionId": "threads",
            "converter": {
              "fromFirestore": [Function],
              "toFirestore": [Function],
            },
            "endAt": undefined,
            "fieldOrders": [],
            "filters": [],
            "kindless": false,
            "limit": undefined,
            "limitType": undefined,
            "offset": undefined,
            "parentPath": {
              "segments": [
                "email",
                "1",
              ],
            },
            "projection": undefined,
            "requireConsistency": true,
            "startAt": undefined,
          },
          "_serializer": {
            "allowUndefined": false,
            "createInteger": [Function],
            "createReference": [Function],
          },
        },
      },
    ],
  },
  "path": "email/1",
  "queries": [
    "root",
    "threads.0",
  ],
}
`;

exports[`serializeDocument > serializes documents with document references 1`] = `
{
  "data": {
    "from": "example@email.com",
    "parent": {
      "_path": {
        "segments": [
          "email",
          "parent",
        ],
      },
    },
    "references": [
      {
        "_path": {
          "segments": [
            "email",
            "parent",
          ],
        },
      },
    ],
  },
  "documents": [
    "parent",
    "references.0",
  ],
  "path": "email/1",
}
`;

exports[`serializeDocument > serializes documents with geopoints 1`] = `
{
  "data": {
    "from": "example@email.com",
    "location": {
      "_latitude": 10,
      "_longitude": 20,
    },
    "tags": {
      "list": [
        {
          "_latitude": 10,
          "_longitude": 20,
        },
      ],
      "location": {
        "_latitude": 10,
        "_longitude": 20,
      },
    },
  },
  "geopoints": [
    "location",
    "tags.location",
    "tags.list.0",
  ],
  "path": "email/1",
}
`;

exports[`serializeDocument > serializes documents with queries 1`] = `
{
  "data": {
    "from": "example@email.com",
    "threads": {
      "_queryOptions": {
        "collectionId": "threads",
        "endAt": undefined,
        "fieldOrders": [
          {
            "direction": "DESCENDING",
            "field": {
              "segments": [
                "date",
              ],
            },
          },
        ],
        "filters": [
          {
            "field": {
              "segments": [
                "field",
              ],
            },
            "op": "ARRAY_CONTAINS",
            "value": [
              1,
              2,
            ],
          },
        ],
        "limit": undefined,
        "limitType": undefined,
        "offset": undefined,
        "parentPath": {
          "segments": [
            "email",
            "1",
          ],
        },
        "startAt": undefined,
      },
      "_queryUtil": {
        "_firestore": {
          "_backoffSettings": {
            "backoffFactor": 1.3,
            "initialDelayMs": 100,
            "maxDelayMs": 60000,
          },
          "_clientPool": {
            "activeClients": {},
            "clientDestructor": [Function],
            "clientFactory": [Function],
            "concurrentOperationLimit": 100,
            "failedClients": {},
            "grpcEnabled": false,
            "maxIdleClients": 1,
            "terminateDeferred": {
              "promise": {},
              "reject": [Function],
              "resolve": [Function],
            },
            "terminated": false,
          },
          "_databaseId": undefined,
          "_projectId": "demo",
          "_serializer": {
            "allowUndefined": false,
            "createInteger": [Function],
            "createReference": [Function],
          },
          "_settings": {
            "libName": "gccl",
            "libVersion": "7.11.0",
            "projectId": "demo",
            "toJSON": [Function],
          },
          "_settingsFrozen": false,
          "_traceUtil": {
            "settingsAttributes": {
              "gcp.firestore.settings.database_id": "(default)",
              "gcp.firestore.settings.host": "firestore.googleapis.com:443",
              "gcp.firestore.settings.initial_retry_delay": "0.1s",
              "gcp.firestore.settings.initial_rpc_timeout": "60s",
              "gcp.firestore.settings.max_idle_channels": 1,
              "gcp.firestore.settings.max_retry_delay": "60s",
              "gcp.firestore.settings.max_rpc_timeout": "60s",
              "gcp.firestore.settings.project_id": "demo",
              "gcp.firestore.settings.retry_delay_multiplier": "1.3",
              "gcp.firestore.settings.rpc_timeout_multiplier": "1",
              "gcp.firestore.settings.total_timeout": "600s",
              "otel.scope.name": "@google-cloud/firestore",
              "otel.scope.version": "7.11.0",
            },
            "tracer": {
              "_provider": {},
              "name": "@google-cloud/firestore",
              "options": undefined,
              "version": "7.11.0",
            },
            "tracerProvider": {},
          },
          "bulkWritersCount": 0,
          "registeredListenersCount": 0,
        },
        "_queryOptions": {
          "allDescendants": false,
          "collectionId": "threads",
          "converter": {
            "fromFirestore": [Function],
            "toFirestore": [Function],
          },
          "endAt": undefined,
          "fieldOrders": [
            {
              "direction": "DESCENDING",
              "field": {
                "segments": [
                  "date",
                ],
              },
            },
          ],
          "filters": [
            {
              "field": {
                "segments": [
                  "field",
                ],
              },
              "op": "ARRAY_CONTAINS",
              "serializer": {
                "allowUndefined": false,
                "createInteger": [Function],
                "createReference": [Function],
              },
              "value": [
                1,
                2,
              ],
            },
          ],
          "kindless": false,
          "limit": undefined,
          "limitType": undefined,
          "offset": undefined,
          "parentPath": {
            "segments": [
              "email",
              "1",
            ],
          },
          "projection": undefined,
          "requireConsistency": true,
          "startAt": undefined,
        },
        "_serializer": {
          "allowUndefined": false,
          "createInteger": [Function],
          "createReference": [Function],
        },
      },
    },
  },
  "path": "email/1",
  "queries": [
    "threads",
  ],
}
`;

exports[`serializeDocument > serializes documents with timestamps 1`] = `
{
  "data": {
    "date": {
      "_nanoseconds": 0,
      "_seconds": 1640995200,
    },
    "from": "example@email.com",
    "tags": {
      "created": {
        "_nanoseconds": 0,
        "_seconds": 1640995200,
      },
      "dates": [
        {
          "_nanoseconds": 0,
          "_seconds": 1640995200,
        },
      ],
    },
  },
  "path": "email/1",
  "timestamps": [
    "date",
    "tags.created",
    "tags.dates.0",
  ],
}
`;

exports[`serializeDocument > serializes plain documents 1`] = `
{
  "data": {
    "attachments": 2,
    "content": "Dear John,

Hello world!",
    "empty": null,
    "from": "example@email.com",
    "tags": {
      "important": true,
      "work": true,
    },
    "to": [
      "recipient1@email.com",
      "recipient2@email.com",
    ],
  },
  "path": "email/1",
}
`;
